# point_cloud_io

./: CMakeLists.txt  package.xml
clouds/: scan_rgb_ref_ph_teta.txt
include/point_cloud_io/: point_cloud_io.h
launch/: read_pc_file.launch
src/: point_cloud_io.cpp  reader.cpp  writer.cpp
