<?xml version="1.0"?>
<package>
  <name>point_cloud_io</name>
  <version>1.0.0</version>
  <description>
  Reading and writing point clouds from files. The reader node
  reads points and other data linked to a specified channel and publishes the
  cloud as sensor_msgs::PointCloud2. The writer subscribes to a cloud topic
  and receives sensor_msgs::PointCloud2 messanges and write them to files.
  To convert point cloud data a combination of the reader and writer can be
  used. Every channel can be inverted and multipled with a factor. In addition,
  the writer enables point cloud transformations to other frames with tf before
  writing the point cloud to a file.
  </description>

  <maintainer email="spuetz@uni-osnabrueck.de">Sebastian Pütz</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/point_cloud_io</url>
  <author email="spuetz@uni-osnabrueck.de">Sebastian Pütz</author>
  
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <buildtool_depend>catkin</buildtool_depend>

</package>
